refactor(admin-api,amp): remove network field requirement for derived datasets (#1971)
